# OpenGL-Windmill

./: CMakeLists.txt  Makefile  README.md
res/shaders/: absorber.fs  absorber.vs  depth.fs  depth.vs  light.fs  light.vs  skybox.fs  skybox.vs
res/textures/skybox/hw_nightsky/: nightsky_bk.tga  nightsky_dn.tga  nightsky_ft.tga  nightsky_lf.tga  nightsky_rt.tga  nightsky_up.tga
src/: main.cpp
src/entities/: CompositeEntity.h  Entity.cpp  Entity.h
src/entities/absorbers/: Absorber.h
src/entities/composites/: Ufo.h
src/entities/lights/: DirectionalLight.cpp  DirectionalLight.h  PointLight.h
src/entities/models/: BaseObjectModel.cpp  BaseObjectModel.h  CircularFrustum.h  Cone.h  CubeModel.h  CuboidModel.h  Cylinder.h  PlaneModel.h  Pyramid.h  RectangularFrustum.h  RegularPyramid.h  RegularTetrahedron.h  Sphere.h  Tetrahedron.h
src/entities/skybox/: Skybox.h
src/rendering/: Camera.cpp  Camera.h  Renderer.cpp  Renderer.h  Scene.cpp  Scene.h  Window.cpp  Window.h
src/rendering/shaders/: AbsorberShaderProgram.cpp  AbsorberShaderProgram.h  DepthShaderProgram.cpp  DepthShaderProgram.h  LightShaderProgram.cpp  LightShaderProgram.h  ShaderProgram.cpp  ShaderProgram.h  SkyboxShaderProgram.cpp  SkyboxShaderProgram.h
src/utils/: Color.h  DirectionalLightAttributes.h  GeometryHelper.h  Material.h  PointLightAttributes.h  Texture.h  Vertex.h
